demo passing value to another view controller

--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -16,11 +16,138 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="paI-Nu-80D">
+                                <rect key="frame" x="252" y="285" width="97" height="30"/>
+                                <color key="backgroundColor" red="0.99865633249999997" green="0.92770957949999999" blue="0.54221999649999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="mos-Rd-SIO"/>
+                                    <constraint firstAttribute="width" constant="97" id="yvU-7a-EF3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="enter appDelegate().index:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVc-vw-qLH">
+                                <rect key="frame" x="199" y="256" width="204" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="enter global index:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4If-te-s8m">
+                                <rect key="frame" x="230" y="331" width="141" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlO-Lb-P5r">
+                                <rect key="frame" x="222" y="419" width="157" height="30"/>
+                                <state key="normal" title="Second ViewController"/>
+                                <connections>
+                                    <action selector="nextView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Ju-0H-Out"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="khl-xq-yV4">
+                                <rect key="frame" x="252" y="360" width="97" height="30"/>
+                                <color key="backgroundColor" red="0.99865633249999997" green="0.92770957949999999" blue="0.54221999649999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="0sl-8a-8z3"/>
+                                    <constraint firstAttribute="height" constant="30" id="dcc-Pc-lTg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="paI-Nu-80D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5rV-di-XjW"/>
+                            <constraint firstItem="xlO-Lb-P5r" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JQY-JQ-7HH"/>
+                            <constraint firstItem="4If-te-s8m" firstAttribute="top" secondItem="paI-Nu-80D" secondAttribute="bottom" constant="16" id="WGg-oE-m8a"/>
+                            <constraint firstItem="khl-xq-yV4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aKb-ap-Uwc"/>
+                            <constraint firstItem="khl-xq-yV4" firstAttribute="top" secondItem="paI-Nu-80D" secondAttribute="bottom" constant="45" id="ePA-tU-z3X"/>
+                            <constraint firstItem="paI-Nu-80D" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kWr-oc-pV5"/>
+                            <constraint firstItem="paI-Nu-80D" firstAttribute="top" secondItem="tVc-vw-qLH" secondAttribute="bottom" constant="8" id="kbH-Nu-dFd"/>
+                            <constraint firstItem="xlO-Lb-P5r" firstAttribute="top" secondItem="paI-Nu-80D" secondAttribute="bottom" constant="104" id="kma-dZ-2Q8"/>
+                            <constraint firstItem="tVc-vw-qLH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rVe-ff-ppF"/>
+                            <constraint firstItem="4If-te-s8m" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s4q-0T-bin"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="anotherInt" destination="khl-xq-yV4" id="grD-HO-JEo"/>
+                        <outlet property="someInt" destination="paI-Nu-80D" id="j61-2F-s2o"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="55" y="614"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="p40-L2-oHN">
+            <objects>
+                <viewController storyboardIdentifier="SecondViewController" id="Ju2-KQ-qiN" customClass="SecondViewController" customModule="test" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gfF-ou-jlQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="cMD-jn-mLf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="as5-Um-X7z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJO-I7-bli">
+                                <rect key="frame" x="252" y="285" width="97" height="30"/>
+                                <color key="backgroundColor" red="0.75274378379999995" green="0.75822462339999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="uod-lP-MaV"/>
+                                    <constraint firstAttribute="width" constant="97" id="xMy-IS-pa0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="from appDelegate().index:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tYW-XS-AAv">
+                                <rect key="frame" x="201" y="259" width="199" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oyp-Ry-AXG">
+                                <rect key="frame" x="252" y="363" width="97" height="30"/>
+                                <color key="backgroundColor" red="0.75274378379999995" green="0.75822462339999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NTU-zl-Abq"/>
+                                    <constraint firstAttribute="width" constant="97" id="X4E-9R-MNf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="from global index:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b80-RQ-25d">
+                                <rect key="frame" x="232" y="337" width="137" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fJO-I7-bli" firstAttribute="top" secondItem="tYW-XS-AAv" secondAttribute="bottom" constant="5" id="2x0-bf-jit"/>
+                            <constraint firstItem="b80-RQ-25d" firstAttribute="centerX" secondItem="as5-Um-X7z" secondAttribute="centerX" id="HcE-VU-gWV"/>
+                            <constraint firstItem="Oyp-Ry-AXG" firstAttribute="top" secondItem="b80-RQ-25d" secondAttribute="bottom" constant="5" id="KIF-pQ-bCx"/>
+                            <constraint firstItem="Oyp-Ry-AXG" firstAttribute="centerX" secondItem="as5-Um-X7z" secondAttribute="centerX" id="OL4-By-rXh"/>
+                            <constraint firstItem="fJO-I7-bli" firstAttribute="centerY" secondItem="as5-Um-X7z" secondAttribute="centerY" id="Ow8-3j-uSK"/>
+                            <constraint firstItem="fJO-I7-bli" firstAttribute="centerX" secondItem="as5-Um-X7z" secondAttribute="centerX" id="Tuq-3s-ky5"/>
+                            <constraint firstItem="b80-RQ-25d" firstAttribute="top" secondItem="fJO-I7-bli" secondAttribute="bottom" constant="22" id="fM9-W8-HXV"/>
+                            <constraint firstItem="Oyp-Ry-AXG" firstAttribute="top" secondItem="fJO-I7-bli" secondAttribute="bottom" constant="48" id="uYs-x3-LkS"/>
+                            <constraint firstItem="tYW-XS-AAv" firstAttribute="centerX" secondItem="as5-Um-X7z" secondAttribute="centerX" id="yZY-Hm-NTu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="globalLabel" destination="Oyp-Ry-AXG" id="T3F-4C-Y7n"/>
+                        <outlet property="label" destination="fJO-I7-bli" id="75c-6V-Kgb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jxa-wj-RRl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="793" y="614"/>
         </scene>
     </scenes>
 </document>
